--- a/Array HOF.html
+++ b/Array HOF.html
@@ -26,6 +26,22 @@ function sortBy(key) {
 }
 
 console.log(sortBy('id'));
+
+
+5.특정 요소 삭제.
+let todos = [
+  { id: 3, content: 'HTML', completed: false },
+  { id: 2, content: 'CSS', completed: true },
+  { id: 1, content: 'Javascript', completed: false }
+];
+
+function removeTodo(id) {
+  todos = todos.filter(todos => todos.id !== id);
+}
+
+removeTodo(2);
+
+console.log(todos);
   
 </body>
 </html>
