--- a/Array HOF.html
+++ b/Array HOF.html
@@ -6,7 +6,45 @@
   <title>Document</title>
 </head>
 <body>
-1.
+1.html 생성
+const todos = [
+  { id: 3, content: 'HTML', completed: false },
+  { id: 2, content: 'CSS', completed: true },
+  { id: 1, content: 'Javascript', completed: false }
+];
+
+function render() {
+  let html = '';
+
+  todos.forEach(function (todo) {
+   html += `<li id="${todo.id}">
+    <label><input type="checkbox"${todo.completed ? 'checked' : ''}>${todo.content}</label>
+  </li>`
+
+  });
+
+  return html;
+}
+
+console.log(render());
+
+2. 특정 프로퍼티 값 추출
+
+const todos = [
+  { id: 3, content: 'HTML', completed: false },
+  { id: 2, content: 'CSS', completed: true },
+  { id: 1, content: 'Javascript', completed: false }
+];
+
+function getValues(key) {
+  return todos.map(todo => todo[key]);
+
+}
+
+console.log(getValues('id')); // [3, 2, 1]
+console.log(getValues('content')); // [ 'HTML', 'CSS', 'Javascript' ]
+console.log(getValues('completed')); // [ false, true, false ]
+
 
 3. 프로퍼티 정렬
 요소의 프로퍼티(id, content, completed)를 문자열 인수로 전달하면 todos의 요소를 정렬하는 함수를 작성하라.
@@ -27,6 +65,21 @@ function sortBy(key) {
 
 console.log(sortBy('id'));
 
+4.특정 요소 추가
+let todos = [
+  { id: 3, content: 'HTML', completed: false },
+  { id: 2, content: 'CSS', completed: true },
+  { id: 1, content: 'Javascript', completed: false }
+];
+
+function addTodo(newTodo) {
+  todos = { newTodo, ...todos };
+
+}
+
+addTodo({ id: 4, content: 'Test', completed: false });
+
+console.log(todos);
 
 5.특정 요소 삭제.
 let todos = [
@@ -42,6 +95,43 @@ function removeTodo(id) {
 removeTodo(2);
 
 console.log(todos);
+
+6. 특정 요소의 프로퍼티 값 반전
+todos에서 대상 요소의 id를 인수로 전달하면 해당 요소의 completed 프로퍼티 값을 반전하는 함수를 작성하라.
+
+hint) 기존 객체의 특정 프로퍼티를 변경/추가하여 새로운 객체를 생성하려면 Object.assign 또는 스프레드 문법을 사용한다.
+
+
+
+
+8. completed 프로퍼티의 값이 true인 요소의 갯수 구하기
+let todos = [
+  { id: 3, content: 'HTML', completed: false },
+  { id: 2, content: 'CSS', completed: true },
+  { id: 1, content: 'Javascript', completed: false }
+];
+
+function countCompletedTodos() {
+  return todos.filter(todo => todo.completed).length;
+
+}
+
+console.log(countCompletedTodos()); // 1
+
+
+9. id 프로퍼티의 값 중에서 최대값 구하기
+let todos = [
+  { id: 3, content: 'HTML', completed: false },
+  { id: 2, content: 'CSS', completed: true },
+  { id: 1, content: 'Javascript', completed: false }
+];
+
+function getMaxId() {
+  return Math.max(... todos.map(todo => todo.id));
+
+}
+
+console.log(getMaxId()); // 3
   
 </body>
 </html>
