--- a/Array HOF.html
+++ b/Array HOF.html
@@ -100,9 +100,10 @@ console.log(todos);
 todos에서 대상 요소의 id를 인수로 전달하면 해당 요소의 completed 프로퍼티 값을 반전하는 함수를 작성하라.
 
 hint) 기존 객체의 특정 프로퍼티를 변경/추가하여 새로운 객체를 생성하려면 Object.assign 또는 스프레드 문법을 사용한다.
+todos = todos.map(todo => (todo.id === id ? { ...todo, completed: !todo.completed } : todo));
+  return todos;
 
-
-
+7.
 
 8. completed 프로퍼티의 값이 true인 요소의 갯수 구하기
 let todos = [
