--- a/Array HOF.html
+++ b/Array HOF.html
@@ -102,15 +102,17 @@ todos에서 대상 요소의 id를 인수로 전달하면 해당 요소의 compl
 hint) 기존 객체의 특정 프로퍼티를 변경/추가하여 새로운 객체를 생성하려면 Object.assign 또는 스프레드 문법을 사용한다.
 todos = todos.map(todo => (todo.id === id ? { ...todo, completed: !todo.completed } : todo));
   return todos;
-
+ // Object.assign 버전
+  function toggleCompletedById2(id) {
+    todos = todos.map(todo => todo.id !== id ? todo : todo.completed ? Object.assign({}, todo, {completed: false}) : Object.assign({}, todo, {completed: true}));
+  }
+  
+  toggleCompletedById1(2);
+  
+  console.log(todos);
 7.모든 요소의 completed 프로퍼티 값을 true로 설정.
 function toggleCompletedAll1() {
   todos = todos.map(todo => ({...todo, completed: true}));
-}
-
-// Object.assign 버전
-function toggleCompletedAll2(id) {
-  todos = todos.map(todo => Object.assign({}, todo, {completed: true}));
 }
 
 8. completed 프로퍼티의 값이 true인 요소의 갯수 구하기
