--- a/Exercise.html
+++ b/Exercise.html
@@ -77,61 +77,138 @@
 
 
  <!-- 3번 -->
-<!DOCTYPE html>
+ <!DOCTYPE html>
+ <html>
+ <head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <title>Counter</title>
+   <style>
+     .container {
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+       width: 130px;
+       margin: 20px auto;
+       font-size: 24px;
+       color: #3f51b5;
+     }
+ 
+     button {
+       padding: 5px 10px;
+       font-size: 24px;
+       border-radius: 5px;
+       color: #3f51b5;
+       border-color: #3f51b5;
+       outline: none;
+       cursor: pointer;
+     }
+ 
+     .counter {
+       width: 50px;
+       text-align: center;
+     }
+   </style>
+ </head>
+ <body>
+   <div class="container">
+     <button class="increase">+</button>
+     <div class="counter">0</div>
+     <button class="decrease">-</button>
+   </div>
+ 
+   <script>
+   const $counter = document.querySelector('.counter');
+
+   const counter = (function () {
+    let num = 0;
+    
+     return {
+    increase() {
+         $counter.textContent = ++num;
+       },
+       decrease() {
+         if(num <= 0) return;
+         $counter.textContent = --num;
+       }
+     };
+   }());
+
+   document.querySelector('.increase').onclick = counter.increase;
+   document.querySelector('.decrease').onclick = counter.decrease;
+
+ </script>
+ </body>
+ </html>
+
+ <!-- 4번 -->
+ <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Counter</title>
+  <title>Stop watch</title>
   <style>
-    .container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 130px;
-      margin: 20px auto;
-      font-size: 24px;
-      color: #3f51b5;
-    }
+    @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 
-    button {
-      padding: 5px 10px;
-      font-size: 24px;
-      border-radius: 5px;
-      color: #3f51b5;
-      border-color: #3f51b5;
-      outline: none;
-      cursor: pointer;
-    }
-
-    .counter {
-      width: 50px;
+    .stop-watch {
+      font-family: 'Source Code Pro', monospace;
       text-align: center;
+      font-size: 3em;
+      padding: 30px;
+    }
+
+    .control {
+      width: 300px;
+      padding: 5px;
+      margin-top: 15px;
+      font-size: 36px;
+      font-weight: bold;
+      border: 2px solid #f44336;
+      border-radius: 4px;
+      cursor: pointer;
+      outline: none;
+    }
+
+    .control:hover {
+      background: #f44336;
+      color: aliceblue;
     }
   </style>
+  <title>Stop watch</title>
 </head>
 <body>
-  <div class="container">
-    <button class="increase">+</button>
-    <div class="counter">0</div>
-    <button class="decrease">-</button>
+  <div class="stop-watch">
+    <div class="display">00:00:00</div>
+    <button class="control">Start</button>
   </div>
-
   <script>
-    const $increase = document.querySelector('.increase');
-    const $counter = document.querySelector('.counter');
-    const $decrease = document.querySelector('.decrease');
-    let num = 0;
+  const $control = document.querySelector('.control');
+  const $display = document.querySelector('.display');
 
-    $increase.onclick = () => {
-      num += 1;
-      $counter.innerHTML = num;
-    };
-    $decrease.onclick = () => {
-      num === 0 ? '' : num -= 1;
-      $counter.innerHTML = num;
-    };
-</script>
+  $control.onclick = () => {
+    let count = 0;
+    let ms = 0;
+    let sec = 0;
+    let min = 0;
+
+    const timeoutId = setInterval(() => {
+      ms += 1;
+      if (ms >= 100) {
+        sec++;
+        ms = 0;
+      }
+      if (sec >= 60) {
+        min++;
+        sec = 0;
+      }
+      $display.textContent = `${0}${min}:${0}${sec}:${ms}`;
+    }, 10);
+  };
+ </script>
 </body>
 </html>
+
+
