--- a/Exercise.html
+++ b/Exercise.html
@@ -187,28 +187,38 @@
   <script>
   const $control = document.querySelector('.control');
   const $display = document.querySelector('.display');
-
+  const $stop = document.querySelector('.stop-watch');
+  let start = true;
+  let timeoutId;
+  let ms = 0;
+  let sec = 0;
+  let min = 0;
+  
   $control.onclick = () => {
-    let count = 0;
-    let ms = 0;
-    let sec = 0;
-    let min = 0;
-
-    const timeoutId = setInterval(() => {
-      ms += 1;
-      if (ms >= 100) {
-        sec++;
-        ms = 0;
-      }
-      if (sec >= 60) {
-        min++;
-        sec = 0;
-      }
-      $display.textContent = `${0}${min}:${0}${sec}:${ms}`;
-    }, 10);
+    if (start) {
+      timeoutId = setInterval(() => {
+        ms += 1;
+        if (ms >= 100) {
+          sec++;
+          ms = 0;
+        }
+        if (sec >= 60) {
+          min++;
+          sec = 0;
+        }
+        $display.textContent = `${min < 10 ? `0${min}` : min}:${sec < 10 ? `0${sec}` : sec}:${ms < 10 ? `0${ms}` : ms}`;
+      }, 10);
+      $control.textContent = 'Stop';
+      start = false;
+    } else {
+      clearInterval(timeoutId);
+      $control.textContent = 'Start';
+      start = true;
+    }
   };
  </script>
 </body>
 </html>
+
 
 
