--- a/Exercise.html
+++ b/Exercise.html
@@ -1,4 +1,4 @@
-<!-- 1번 -->
+<!-- Toggle side nav -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -76,7 +76,7 @@
 </html>
 
 
- <!-- 3번 -->
+ <!--Counter -->
  <!DOCTYPE html>
  <html>
  <head>
@@ -142,7 +142,7 @@
  </body>
  </html>
 
- <!-- 4번 -->
+ <!-- Stopwatch -->
  <!DOCTYPE html>
 <html>
 <head>
