--- a/Array HOF.html
+++ b/Array HOF.html
@@ -143,6 +143,10 @@ function getMaxId() {
 }
 
 console.log(getMaxId()); // 3
+10.
+let todos = {
+  id: 3, content: 'HTML', 
+}
   
 </body>
 </html>
